--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -4,10 +4,34 @@
 <head>
   <meta charset='utf-8'>
   <meta name="viewport" content="width=device-width,initial-scale=1">
+  <title>Nooze Aggregator</title>
   <script defer src="https://kit.fontawesome.com/1c3587d824.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css">
-  <link rel="stylesheet" href="{{ url_for('static', filename='static/nzfe.css') }}" type="text/css">
-  <title>Nooze Aggregator</title>
+  <link rel="stylesheet" href="{{ url_for('static', filename='css/nzfe.css') }}" type="text/css">
+  <link rel="shortcut icon" href="{{ url_for('static', filename='icons/favicon.ico') }}">
+  <link rel="apple-touch-icon" sizes="57x57" href="{{ url_for('static', filename='icons/apple-icon-57x57.png') }}" />
+  <link rel="apple-touch-icon" sizes="60x60" href="{{ url_for('static', filename='icons/apple-icon-60x60.png') }}" />
+  <link rel="apple-touch-icon" sizes="72x72" href="{{ url_for('static', filename='icons/apple-icon-72x72.png') }}" />
+  <link rel="apple-touch-icon" sizes="76x76" href="{{ url_for('static', filename='icons/apple-icon-76x76.png') }}" />
+  <link rel="apple-touch-icon" sizes="114x114"
+    href="{{ url_for('static', filename='icons/apple-icon-114x114.png') }}" />
+  <link rel="apple-touch-icon" sizes="120x120"
+    href="{{ url_for('static', filename='icons/apple-icon-120x120.png') }}" />
+  <link rel="apple-touch-icon" sizes="144x144"
+    href="{{ url_for('static', filename='icons/apple-icon-144x144.png') }}" />
+  <link rel="apple-touch-icon" sizes="152x152"
+    href="{{ url_for('static', filename='icons/apple-icon-152x152.png') }}" />
+  <link rel="apple-touch-icon" sizes="180x180"
+    href="{{ url_for('static', filename='icons/apple-icon-180x180.png') }}" />
+  <link rel="icon" type="image/png" sizes="192x192"
+    href="{{ url_for('static', filename='icons/android-icon-192x192.png') }}" />
+  <link rel="icon" type="image/png" sizes="32x32" href="{{ url_for('static', filename='icons/favicon-32x32.png') }}" />
+  <link rel="icon" type="image/png" sizes="96x96" href="{{ url_for('static', filename='icons/favicon-96x96.png') }}" />
+  <link rel="icon" type="image/png" sizes="16x16" href="{{ url_for('static', filename='icons/favicon-16x16.png') }}" />
+  <!-- <link rel="manifest" href="{{ url_for('static', filename='manifest.json') }}" /> -->
+  <meta name="msapplication-TileColor" content="#ffffff" />
+  <meta name="msapplication-TileImage" content="{{ url_for('static', filename='icons/ms-icon-144x144.png') }}" />
+  <meta name="theme-color" content="#ffffff" />
 </head>
 
 <body>
@@ -17,7 +41,8 @@
   <div id="app">
     <!-- <p>Hi from nzfe</p> -->
   </div>
-  <script src="/js/compiled/app.js"></script>
+  <!-- <script src="/js/compiled/app.js"></script> -->
+  <script src="{{ url_for('static', filename='js/app.js') }}"></script>
 </body>
 
 </html>
