mod warning msg in index.html

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -27,7 +27,7 @@
 
 <body>
   <noscript>
-    nzfe is a JavaScript app. Please enable JavaScript to continue.
+    Nooze is a JavaScript app. Please enable JavaScript to continue.
   </noscript>
   <div id="app">
     <!-- <p>Hi from nzfe</p> -->
